tests/compError/emptyField.ucl
// compError
// error: empty field initialization
// tests/compError/emptyField.ucl:10 -> here

const Test = struct {
	field a: String;
};

const test = Test {
	.a;
};